Fix youtube video html link for the season page

--- a/js/templates/movie-season.html
+++ b/js/templates/movie-season.html
@@ -1,3 +1,5 @@
+<!-- Html for both a movie and a tvShow season page -->
+
 <head>
     {{#if isMovieType}}
     <title>{{name}}</title>
@@ -53,7 +55,7 @@
 
         <!-- Preview video box -->
         <div class="preview-box">
-            <div class="preview-content-video movie-video-preview preview-element-video"></div>
+            <div class="preview-element-video"></div>
         </div>
     </div>
 
