not working much. trying stuff

--- a/js/templates/actorThumbnail.html
+++ b/js/templates/actorThumbnail.html
@@ -1,7 +1,7 @@
 <div class="actorThumbnail">
-    <div id="idTmpImg" class="imageThumbnail"></div>
 
-   <!-- <img id="idTmpImg" class="imageThumbnail" src="{{imgActor}}"> -->
+
+   <img id="idTmpImg" class="imageThumbnail" src="{{imgActor}}">
 
 
     <div class="descriptionThumbnail">
