--- a/css/movie-season.css
+++ b/css/movie-season.css
@@ -11,7 +11,7 @@ html{
 
 /* Title and background image */
 .element-background-image img {
-    max-width:100%;
+    width:100%;
 }
 
 .element-title {
