--- a/css/style.css
+++ b/css/style.css
@@ -609,6 +609,7 @@ button {
     div #content {
         max-width: 100%;
         margin-top: 10%;
+        margin-bottom: 10%;
     }
 
     .navigation-bar {
