--- a/js/templates/thumbnail.html
+++ b/js/templates/thumbnail.html
@@ -1,12 +1,12 @@
 {{#if isActorType}}
 <div class="actorThumbnail">
-    <img class="thumbnailImg" src="url(../../img/actor/noProfile.jpg">
+    <img id="idTmpImg" class="imageThumbnail" src="{{imgActor}}">
     <div class="descriptionThumbnail">
-        <a class="actor-box" href="#actor/{{artistId}}">
-            <h2 class="thumbnailNomArtist">{{artistName}}</h2>
-        </a>
-        <div >Artist genre : {{primaryGenreName}}</div>
-        <div class="shortBio">{{biography}}</div>
+        <h2 class="thumbnailNomArtist">
+            <a class="actor-box" href="#actor/{{artistId}}">{{artistName}}</a>
+        </h2>
+        <div class="genreActorThumbnail"> Genre : {{primaryGenreName}}</div>
+        <div id="idTmpBio" class="shortBio">{{shortenBio}}</div>
     </div>
 </div>
 
