mergin' to refactor

--- a/css/actor.css
+++ b/css/actor.css
@@ -2,7 +2,6 @@
 
 
 .actor {
-    margin-top: 10%;
     max-width: 100%;
     width: 100%;
 }
@@ -14,7 +13,7 @@
     position: relative;
 }
 
-.imgActor {
+#imgActor {
     max-width: 50%;
     height: auto;
     float: left;
@@ -39,7 +38,7 @@
     margin-top: 0;
 }
 
-.description {
+#description {
     width: 100%;
 }
 
@@ -102,10 +101,10 @@
 /*Fin Section movie*/
 
 /*Pour la tablette*/
-@media screen and (min-width: 640px){
+@media screen and (min-width: 550px){
 
 
-    .description {
+    #description {
         float: right;
         width: 65%;
 
@@ -114,7 +113,7 @@
         float: left;
         width: 30%;
     }
-    .imgActor{
+    #imgActor{
 
         float: none;
         max-width: 80%;
@@ -131,14 +130,25 @@
         font-size: 150%;
     }
     .genre{
-        font-size: 170%;
+        font-size: 100%;
         margin-left: 7%;
         font-weight: bold;
     }
     #header{
-        font-size: 300%;
+        font-size: 150%;
     }
 }
+
+
+@media screen and (min-width: 640px){
+    #header{
+        font-size: 300%;
+    }
+    .genre {
+        font-size: 170%;
+    }
+}
+
 @media screen and (min-width: 960px){
     #header{
         font-size: 200%;
@@ -188,7 +198,7 @@
 
     }
 
-    .imgActor {
+    #imgActor {
         max-width: 50%;
         margin: 10% 25%;
     }
