--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -1,18 +1,14 @@
-
-
 <div class="actor">
-
 
     <div>
         <h1 id="header">{{artistName}}</h1>
         <p class="genre">Genre principal : {{primaryGenreName}}</p>
-
     </div>
 
     <div class="information">
         <div class="actor-itunes">
 
-            <img class="imgActor" src="{{imgActor}}">
+            <img id="imgActor" src="{{imgActor}}">
 
             <a href="{{artistLinkUrl}}">
                 <div class="itunes">
@@ -24,9 +20,8 @@
 
         <div>
             <h2> Description :</h2>
-            <div class="description">{{biography}} </div>
+            <div id="description">{{biography}} </div>
         </div>
-
 
     </div>
 </div>
