--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -4,7 +4,10 @@
     </div>
 
     <div class="watchlist-aside">
-        <h4 class="watchlist-title">{{name}}</h4>
+        <div class="watchlist-title-box" data-id="{{id}}">
+            <h4 class="watchlist-title">{{name}}</h4>
+            <button class="watchlist-edit-button btn submit-btn" type="button">Edit</button>
+        </div>
 
         <div class="watchlist-movies">
             {{#each movies}}
@@ -36,8 +39,11 @@
                         </div>
                     </div>
                 </a>
+
             </div>
             {{/each}}
         </div>
+
+        <button class="remove-watchlist-movie delete-btn btn" data-id="{{id}}">Remove Movies</button>
     </div>
 </div>
