--- a/css/episodes-thumbnail.css
+++ b/css/episodes-thumbnail.css
@@ -1,4 +1,4 @@
-.episode-thumbnail-box{
+.episode-thumbnail-box {
     font-family: "Open Sans", "Droid Sans", "Helvetica Neue", Helvetica, sans-serif;
     background-color: #282A2F;
     transition: opacity ease-in-out .55s;
@@ -30,13 +30,13 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
+
 }
 
 .episode-initial-image {
     opacity: 0.9;
     margin: 0;
     padding: 0;
-    max-width: 70px;
     align-items: stretch;
     flex: 1 1 auto;
     height: 100%;
@@ -88,7 +88,7 @@
 }
 
 @media screen and (min-width: 970px) {
-    .episode-thumbnail-box{
+    .episode-thumbnail-box {
         font-family: "Open Sans", "Droid Sans", "Helvetica Neue", Helvetica, sans-serif;
         background-color: #171717;
         transition: opacity ease-in-out .55s;
@@ -100,22 +100,17 @@
         flex-direction: column;
         flex: 1 1 auto;
         justify-content: center;
-    }
-
-    .episode-thumbnail {
         align-items: center;
-        flex: 1 1 100%;
-        height: 100%;
     }
 
-
-    .episode-initial-image {
-        flex: 1 1 100%;
-        min-width: 0;
-        height: 100%;
-        max-height: 400px;
+    .thumbnail {
         width: 100%;
+        margin-left: 0;
+        max-width: none;
     }
 
+    .episode-thumbnail-top-box{
+        flex: 1 1 100%;
+    }
 
 }
