--- a/js/templates/imageLink.html
+++ b/js/templates/imageLink.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<div class="initial-page">
-		<div class="initial-image"> <img src="{{artworkUrl60}}" href="{{urlReference}}/{{id}}"/></div>
+		<div class="movies-initial-image"> <img src="{{artworkUrl60}}" href="{{urlReference}}/{{id}}"/></div>
 		<div class="initial-name">{{trackName}}{{collectionName}}</div>
 		<div class="initial-release-date">Release date : {{releaseDate}}</div>
 	</div>
