--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -18,7 +18,7 @@
 
                 <a class="movies-box" href="#movie/{{trackId}}">
                     <div class="thumbnail">
-                        <div class="initial-image">
+                        <div class="movies-initial-image">
                             <img class="movies-thumbnail" src="{{artworkUrl100}}"/>
                         </div>
                     </div>
