--- a/css/style.css
+++ b/css/style.css
@@ -428,25 +428,38 @@ button {
     margin-top: 6%;
 }
 
+
 .search-input {
-    position: relative;
-    top: -2px;
-    border-top-left-radius: 0.3em;
-    border-bottom-left-radius: 0.3em;
-    background: #2b303b;
-    padding-top: 2.6px;
-    padding-left: 0.6em;
-    border-top: none;
-    border-bottom: none;
-    border-right: 0;
-    border-left: 0;
-    -webkit-transition: background .55s ease;
-    -moz-transition: background .55s ease;
-    -ms-transition: background .55s ease;
-    -o-transition: background .55s ease;
-    transition: background .55s ease;
-    width: 70%;
+    display: inline-block;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    width: 8em;
+    height: 0.4em;
+    padding: 0.6em 1em 0.6em 1em;
+    border: 1px solid #b7b7b7;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    font: normal 1em/0 Arial, Helvetica, sans-serif;
+    color: #1f8fbd;
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    background: #45434A;
+    -webkit-box-shadow: 2px 2px 4px 2px #1D608D ;
+    box-shadow: 2px 2px 4px 2px #1D608D ;
+    -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -webkit-transform:    skewX(-15deg);
+    transform:    skewX(-15deg);
 }
+
+.input-bar input.search-input:hover, .input-bar input.search-input:focus, .input-bar input.search-input:active {
+    color: #1f8fbd;
+    background: #4f4d55;
+}
+
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .search-input {
@@ -728,20 +741,34 @@ button {
     }
 
     .search-input {
-        margin-left: 0;
-        color: black;
-        height: 2em;
-        display: initial;
-        border-top-left-radius: 0.4em;
-        border-bottom-left-radius: 0.4em;
-        background: white;
-        padding-top: 0.3em;
-        padding-left: 1.4em;
+        display: inline-block;
+        -webkit-box-sizing: content-box;
+        -moz-box-sizing: content-box;
+        box-sizing: content-box;
+        width: 8em;
+        height: 0.4em;
+        padding: 0.6em 1em 0.6em 1em;
+        border: 1px solid #b7b7b7;
+        -webkit-border-radius: 3px;
+        border-radius: 3px;
+        font: normal 1em/0 Arial, Helvetica, sans-serif;
+        color: #1f8fbd;
+        -o-text-overflow: clip;
+        text-overflow: clip;
+        background: #45434A;
+        -webkit-box-shadow: 2px 2px 4px 2px #1D608D ;
+        box-shadow: 2px 2px 4px 2px #1D608D ;
+        -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+        -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+        -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+        transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+        -webkit-transform:    skewX(-15deg);
+        transform:    skewX(-15deg);
     }
 
     .input-bar input.search-input:hover, .input-bar input.search-input:focus, .input-bar input.search-input:active {
-        color: black;
-        background: #FFCC00;
+        color: #1f8fbd;
+        background: #4f4d55;
     }
 
     .go-research {
