--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
     top: 0.8em;
     right: 0.5em;
     z-index: 10000;
+    cursor:default;
 }
 
 
@@ -115,7 +116,8 @@ button {
 .username {
     color: white;
     font-family: "Helvetica Neue";
-    font-size: 13px;
+    cursor: pointer;
+    font-size: 1.4em;
 
 }
 .member-hamburger img {
@@ -124,6 +126,7 @@ button {
     height: 30px;
     float: right;
     margin-right: 1.5em;
+    cursor: pointer;
 }
 
 #member-menu-open {
@@ -425,7 +428,7 @@ button {
     max-width: 13em;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 6%;
+    margin-top: 5%;
 }
 
 
@@ -441,12 +444,12 @@ button {
     -webkit-border-radius: 3px;
     border-radius: 3px;
     font: normal 1em/0 Arial, Helvetica, sans-serif;
-    color: #1f8fbd;
+    color: #239fed;
     -o-text-overflow: clip;
     text-overflow: clip;
     background: #45434A;
-    -webkit-box-shadow: 2px 2px 4px 2px #1D608D ;
-    box-shadow: 2px 2px 4px 2px #1D608D ;
+    -webkit-box-shadow: 0.08em 0.08em 0.16em 0.08em #239fed ;
+    box-shadow: 0.08em 0.08em 0.16em 0.08em #239fed;
     -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
     -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
     -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
@@ -456,7 +459,7 @@ button {
 }
 
 .input-bar input.search-input:hover, .input-bar input.search-input:focus, .input-bar input.search-input:active {
-    color: #1f8fbd;
+    color: #239fed;
     background: #4f4d55;
 }
 
@@ -500,12 +503,34 @@ button {
 }
 
 #search-icon {
-    bottom: 1px;
-    width: 100%;
-    height: auto;
+    width: 0.4em;
+    height: 0.4em;
     position: relative;
     margin-right: auto;
     margin-left: auto;
+    display: inline-block;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    cursor: pointer;
+    padding: 0.6em 1em 0.6em 1em;
+    border: 1px solid #018dc4;
+    border-left-width: 0;
+    -webkit-border-radius: 0.12em 0.12em 0.12em 0.12em;
+    border-radius: 0.12em 0.12em 0.12em 0.12em;
+    color: rgba(255,255,255,0.9);
+    font: normal 1em/0 Arial, Helvetica, sans-serif;
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    background: #239fed;
+    -webkit-box-shadow: 0.08em 0.08em 0.16em 0.08em #239fed ;
+    box-shadow: 0.08em 0.08em 0.16em 0.08em #239fed;
+    -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+    -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+    -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+    -webkit-transform:    skewX(-15deg);
+    transform:    skewX(-15deg);
 }
 
 .go-research {
@@ -738,37 +763,6 @@ button {
 
     .research-options {
         color: transparent;
-    }
-
-    .search-input {
-        display: inline-block;
-        -webkit-box-sizing: content-box;
-        -moz-box-sizing: content-box;
-        box-sizing: content-box;
-        width: 8em;
-        height: 0.4em;
-        padding: 0.6em 1em 0.6em 1em;
-        border: 1px solid #b7b7b7;
-        -webkit-border-radius: 3px;
-        border-radius: 3px;
-        font: normal 1em/0 Arial, Helvetica, sans-serif;
-        color: #1f8fbd;
-        -o-text-overflow: clip;
-        text-overflow: clip;
-        background: #45434A;
-        -webkit-box-shadow: 2px 2px 4px 2px #1D608D ;
-        box-shadow: 2px 2px 4px 2px #1D608D ;
-        -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-        -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-        -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-        transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-        -webkit-transform:    skewX(-15deg);
-        transform:    skewX(-15deg);
-    }
-
-    .input-bar input.search-input:hover, .input-bar input.search-input:focus, .input-bar input.search-input:active {
-        color: #1f8fbd;
-        background: #4f4d55;
     }
 
     .go-research {
