--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -28,8 +28,8 @@
                          src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png">
                 </span>
                 <button class="member-hamburger">
-                    <div class="username">{{user}}</div>
-                    <img class="user-icon" src="img/member_icon.png"/>
+                    <div class="username toggle-member-menu">{{user}}</div>
+                    <img class="user-icon toggle-member-menu" src="img/member_icon.png"/>
                 </button>
             </div>
             <div class="research-options collapsed">advanced research</div>
