no name modification...

--- a/js/templates/user.html
+++ b/js/templates/user.html
@@ -2,21 +2,14 @@
     <div class="personnalInfo">
         <div>
             <label>Name :  </label> <span class="userInfo"> {{name}}</span>
-            <div>
-                <input class="inputNewName"> </input>
-                <button class="inputNewNameButton">Update</button>
-            </div>
         </div>
         <div>
             <label>Email : </label> <span class="userInfo"> {{email}}</span>
-            <div>
-                <input class="inputNewEmail"> </input>
-                <button id="inputNewEmailButton">Update</button>
-            </div>
         </div>
 
     </div>
     <div class="following">
+        <label><br> </br>Following: </label>
         {{#each following}}
             <div><a href="/users/{{id}}">{{name}}</a></div>
         {{/each}}
