--- a/css/movies-seasons-thumbnail.css
+++ b/css/movies-seasons-thumbnail.css
@@ -87,74 +87,87 @@
 }
 
 @media screen and (min-width: 970px) {
+
+    /*.movies-box:last-of-type {*/
+        /*border-bottom: none;*/
+    /*}*/
+
+    .thumbnail, .movies-box  /*, .initial-image, .movies-thumbnail*/ {
+        min-width: 0; /* for Firefox and future Chrome etc. */
+        width: 100%;
+        max-width: 8em;
+        height: 100%;
+        max-height: 16em;
+    }
+
+    /*.thumbnail > div{*/
+        /*display: inline-flex;*/
+    /*}*/
+
     .movies-box {
-        margin-left: auto;
-        margin-right: auto;
         background-color: transparent;
         border: none;
-
         display: inline-flex;
         flex-wrap: nowrap;
         flex-direction: column;
         flex-flow: column;
-        justify-content: center;
-        align-content: center;
-        align-items: stretch;
-        width: 100%;
-        max-width: 200px;
-        height: 100%;
-        max-height: 400px;
-    }
-
-    .movies-box:last-of-type {
-        border-bottom: none;
-    }
-
-    .thumbnail {
-        margin-left: auto;
-        margin-right: auto;
+        justify-content: space-around;
         align-items: center;
-        flex: 1 1 100%;
-        min-width: 0; /* for Firefox and future Chrome etc. */
-        width: 100%;
-        max-width: 200px;
-        height: 100%;
     }
 
-    .movies-top-box {
-        display: none;
-        width: 0;
-        height: 0;
-    }
+    /*.movies-header {*/
+        /*align-self: flex-start;*/
+        /*width: 100%;*/
+    /*}*/
 
-    .movies-header {
-        display: none;
-    }
+    /*.movies-top-box {*/
+        /*display: flex;*/
+        /*flex-direction: column;*/
+        /*justify-content: space-around;*/
+        /*align-content: space-around;*/
+        /*align-items: flex-start;*/
+    /*}*/
 
-    .movies-description {
-        display: none;
-    }
+    /*.movies-title {*/
+        /*white-space: normal;*/
+        /*font-size: 0.57em;*/
+        /*min-height: 0.1em;*/
+        /*height: 4em;*/
+        /*margin: 1em 0 -1.2em 0;*/
+    /*}*/
 
-    .movies-footer {
-        display: none;
-    }
+    /*.initial-release-date {*/
+        /*float: right;*/
+        /*font-size: 0.6em;*/
+    /*}*/
 
-    .movies-initial-image {
-        flex: 1 1 100%;
-        min-width: 0; /* for Firefox and future Chrome etc. */
-        height: 100%;
-        max-height: 400px;
-        width: 100%;
-        max-width: 200px;
-    }
+    /*.movies-description {*/
+        /*align-self: center;*/
+    /*}*/
 
-    .movies-thumbnail {
-        flex: 1 1 100%;
-        min-width: 0; /* for Firefox and future Chrome etc. */
-        height: 100%;
-        max-height: 400px;
-        width: 100%;
-        max-width: 200px;
+    /*.movies-description-text {*/
+        /*white-space: normal;*/
+        /*font-size: 0.5em;*/
+        /*min-height: 0.1em;*/
+        /*max-height: 7em;*/
+        /*margin: 1em 0 -1.2em 0;*/
+    /*}*/
 
-    }
+    /*.movies-footer {*/
+        /*display: flex;*/
+        /*flex-direction: row;*/
+        /*flex-basis: max-content;*/
+        /*justify-content: space-between;*/
+        /*align-self: stretch;*/
+    /*}*/
+
+    /*.content-advisory-rating, .duration {*/
+        /*font-size: 0.6em;*/
+
+    /*}*/
+
+    /*.ellipsis {*/
+        /*font-size: 0.6em;*/
+        /*color: #B2B5BB;*/
+    /*}*/
 }
