added minor correction to the search bar button

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -24,8 +24,7 @@
 
                 <input placeholder="Search..." class="search-input">
                 <span class="go-research">
-                    <img id="search-icon"
-                         src="img/food.svg">
+                    <div id="search-icon" style="background-image: url(img/food.svg);"></div>
                 </span>
                 <button class="member-hamburger">
                     <div class="username toggle-member-menu">{{user}}</div>
