Add html basis for episode view

--- a/js/templates/episode.html
+++ b/js/templates/episode.html
@@ -1,3 +1,33 @@
+<div class="Episode-modal">
+    <div class="close-button"></div>
+    <div class="episode-modal-title">
+        Episode {{trackNumber}} : {{trackName}}
+    </div>
+    <div class="episode-modal-season">
+        {{collectionName}} - Episode {{trackNumber}}
+    </div>
+    <div class="episode-modal-content">
+        <div class="episode-modal-content-left">
+            <div class="episode-modal-cover">
+                <img src="{{artworkUrl100}}"/>
+            </div>
+            <div class=""episode-modal-info>
+                <span>{{convertDuration}}</span>
+                <span>{{longDescription}}</span>
+                <span>{{trackPrice}}</span>
+            </div>
+        </div>
+        <div class="episode-modal-content-right">
+            <div class="episode-modal-preview">
+
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+<!--
 <head>
     <title>{{collectionName}}</title>
 </head>
@@ -130,3 +160,4 @@
     </div>
 
 </div>
+-->
