--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -24,11 +24,11 @@
 
                 <input placeholder="Search..." class="search-input">
                 <span class="go-research">
-                    <div id="search-icon" style="background-image: url(img/food.svg);"></div>
+                    <div id="search-icon" style="background-image: url(img/searchIcons/food.svg);"></div>
                 </span>
                 <button class="member-hamburger">
                     <div class="username toggle-member-menu">{{user}}</div>
-                    <img class="user-icon toggle-member-menu" src="img/food.svg"/>
+                    <img class="user-icon toggle-member-menu" />
                 </button>
             </div>
             <div class="research-options collapsed">advanced research</div>
