progress on the new thumbnail css, pause to fix Vincent's pull request

--- a/css/episodes-thumbnail.css
+++ b/css/episodes-thumbnail.css
@@ -12,7 +12,7 @@
     justify-content: center;
 }
 
-.initial-release-date {
+.episode-initial-release-date {
     color: #97999F;
     font-size: 90%;
 }
