--- a/js/templates/thumbnail.html
+++ b/js/templates/thumbnail.html
@@ -19,10 +19,11 @@
         <div class="{{cssClassType}}-top-box">
             <div class="{{cssClassType}}-header">
                 <h3 class="{{cssClassType}}-title"> {{entertainementName}}</h3>
-                <div class="initial-release-date">{{releaseYear}}</div>
+                <div class="{{cssClassType}}-initial-release-date">{{releaseYear}}</div>
             </div>
             <div class="{{cssClassType}}-description">
                 <p class="{{cssClassType}}-description-text">{{longDescription}}</p>
+                <span class="ellipsis">...</span>
             </div>
             <div class="{{cssClassType}}-footer">
                 <div class="content-advisory-rating">{{contentAdvisoryRating}}</div>
