Add function to show episode view

--- a/js/templates/thumbnail.html
+++ b/js/templates/thumbnail.html
@@ -11,7 +11,8 @@
 </div>
 
 {{else}}
-<a class="{{cssClassType}}-box" href="{{routingRef}}">
+<a class="{{cssClassType}}-box"
+   {{#unless isEpisodeType}} href={{routingRef}} {{else}} id="idThumbnail" {{/unless}}>
     <div class="thumbnail">
         <div class="{{cssClassType}}-initial-image">
             <img class="{{cssClassType}}-thumbnail" src="{{artworkUrl100}}"/>
