--- a/js/templates/thumbnail.html
+++ b/js/templates/thumbnail.html
@@ -16,7 +16,7 @@
         <div class="{{cssClassType}}-initial-image">
             <img class="{{cssClassType}}-thumbnail" src="{{artworkUrl100}}"/>
         </div>
-        <div class="{{cssClassType}}-top-box">
+        <div class="{{cssClassType}}-top-box" style="background-image: url({{artworkUrl100}});">
             <div class="{{cssClassType}}-header">
                 <h3 class="{{cssClassType}}-title"> {{entertainementName}}</h3>
                 <div class="{{cssClassType}}-initial-release-date">{{releaseYear}}</div>
