--- a/css/episodes-thumbnail.css
+++ b/css/episodes-thumbnail.css
@@ -40,6 +40,7 @@
     align-items: stretch;
     flex: 1 1 auto;
     height: 100%;
+    background-size: 0;
 }
 
 .episode-thumbnail {
@@ -54,6 +55,7 @@
     padding-left: 0.5em;
     min-width: 0;
     flex: 1 1 auto;
+    background-size: 0;
 }
 
 .episode-title {
