fix partiel des watchlists, il faut encore ajouter le bouton ajouter/retirer le film d'une watchlist dans le template

--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -9,39 +9,7 @@
             <button class="watchlist-edit-button btn submit-btn" type="button">Edit</button>
         </div>
 
-        <div class="watchlist-movies">
-            {{#each movies}}
-            <div class="watchlist-movie">
-                <div class="watchlist-movie-select-box">
-                    <input class="delete-watchlist-movie-checkbox" type="checkbox" data-id="{{../id}}" value="{{trackId}}"/>
-                </div>
-
-                <a class="movies-box" href="#movie/{{trackId}}">
-                    <div class="thumbnail">
-                        <div class="movies-initial-image">
-                            <img class="movies-thumbnail" src="{{artworkUrl100}}"/>
-                        </div>
-                    </div>
-
-                    <div class="movies-top-box">
-                        <div class="movies-header">
-                            <h3 class="movies-title">{{trackName}}</h3>
-                            <div class="initial-release-date">{{releaseYear}}</div>
-                        </div>
-
-                        <div class="movies-description">
-                            <p class="movies-description-text">{{longDescription}}</p>
-                        </div>
-
-                        <div class="movies-footer">
-                            <div class="content-advisory-rating">{{convertDuration}}</div>
-                            <div class="duration">{{convertDuration}}</div>
-                        </div>
-                    </div>
-                </a>
-
-            </div>
-            {{/each}}
+        <div id="{{name}}-watchlist-movies">
         </div>
 
         <button class="remove-watchlist-movie delete-btn btn" data-id="{{id}}">Remove Movies</button>
