--- a/css/movies-seasons-thumbnail.css
+++ b/css/movies-seasons-thumbnail.css
@@ -81,9 +81,9 @@
 
 @media screen and (min-width: 640px) {
 
-}
+/*}
 
-@media screen and (min-width: 970px) {
+@media screen and (min-width: 970px) {*/
 
     .movies-box:last-of-type {
         border-bottom: none;
