--- a/css/episode.css
+++ b/css/episode.css
@@ -13,4 +13,47 @@ html{
 @media screen and (min-width: 980px) {
 
 
+    .Episode-modal {
+        border: solid white;
+        font-size: 1em;
+        background-color: red;
+        /* display: none; */ /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        margin: 5% 10%;
+        left: 0;
+        top: 0;
+        width: 80%; /* Full width */
+        height: 80%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(62, 62, 62); /* Fallback color */
+        background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    }
+
+    .episode-modal-cover img {
+        width: 40%;
+    }
+
+    .episode-modal-content-left {
+        width: 30%;
+    }
+
+    .episode-modal-content-right {
+        width: 70%;
+    }
+
+    .episode-modal-content {
+        display: flex;
+        ;
+    }
+
+    .episode-modal-preview {
+        width: 100%;
+    }
+
+    iframe {
+        width: 95%;
+        height: 400px;
+    }
+
 }
