--- a/css/movies-seasons-thumbnail.css
+++ b/css/movies-seasons-thumbnail.css
@@ -57,7 +57,7 @@
 
 .movies-title {
     font-size: 95%;
-    color: #634ED5;
+    color: #0085FF;
     margin-top: 0;
     margin-bottom: 0;
     min-width: 0;
